--- a/refactor/package.json
+++ b/refactor/package.json
@@ -12,7 +12,9 @@
     "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.13.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.5.4",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
