--- a/refactor/package.json
+++ b/refactor/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "framer-motion": "^11.5.4",
+    "lodash": "^4.17.21",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
