--- a/refactor/package.json
+++ b/refactor/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.13.3",
+    "@react-pdf-viewer/core": "3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "framer-motion": "^11.5.4",
     "lodash": "^4.17.21",
     "next": "14.2.11",
+    "pdfjs-dist": "3.4.120",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
