--- a/refactor/package.json
+++ b/refactor/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "framer-motion": "^11.5.4",
+    "lenis": "^1.3.17",
     "lodash": "^4.17.21",
     "next": "14.2.11",
     "pdfjs-dist": "3.4.120",
