--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,8 @@
   command = "npm run build"
   publish = ".next"
 
+[build.environment]
+  NODE_VERSION = "20"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
